[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_{{cookiecutter.plugin_name}}", "sopel_{{cookiecutter.plugin_name}}.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-{{cookiecutter.plugin_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"

authors = [
  { name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: Eiffel Forum License (EFL)",
  "License :: OSI Approved :: Eiffel Forum License",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0",
]

[project.urls]
"Homepage" = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}"
"Bug Tracker" = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}/issues"

[project.entry-points."sopel.plugins"]
"{{cookiecutter.plugin_name}}" = "sopel_{{cookiecutter.plugin_name}}.plugin"
