[metadata]
name = sopel-{{cookiecutter.module_name}}
version = {{cookiecutter.version}}
description = {{cookiecutter.project_short_description}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
test_suite = tests

[options.entry_points]
sopel.plugins =
    {{cookiecutter.module_name}} = sopel_{{cookiecutter.module_name}}.{{cookiecutter.module_name}}
